test/spec_vectors/f64_cmp/fail/module_6.wat
(module (func (result f64) (f64.ne (i64.const 0) (f32.const 0))))